Changed banner, skills
I updated a couple of things on the page to test the update notes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i> 
                 </button>
-                <a class="navbar-brand" href="#page-top">Casey Gierke's Portfolio Page</a>
+                <a class="navbar-brand" href="#page-top">Casey Gierke</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -84,7 +84,7 @@
                     <div class="intro-text">
                         <h1 class="name">Hey there {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">Python Developer - Flask Framework</span>
+                        <span class="skills">Python Developer - Data Scientist - Environmental Consultant</span>
                     </div>
                 </div>
             </div>
@@ -116,6 +116,7 @@
                     <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                                
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
