--- a/templates/index.html
+++ b/templates/index.html
@@ -103,13 +103,13 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.chesstastic.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://www.blm.gov/programs/recreation/permits-and-passes/lotteries-and-permit-systems/new-mexico/rio-chama-river" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/portfolio/20180531_145112.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
