--- a/templates/index.html
+++ b/templates/index.html
@@ -109,18 +109,18 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/20180531_145112.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/portfolio/2018051_145112.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://github.com/caseygierke/c9_flask_portfolio_app/blob/master/static/img/portfolio/CaseyGierke.pdf" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
+                        <img src="/static/img/portfolio//CaseyGierke.pdf" class="img-responsive" alt="Slice of cake">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
