Fix image, change resume image

--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/2018051_145112.jpg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/portfolio/20180531_145112.jpg" target="_blank" class="img-responsive" alt="Rowing the Chama">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -120,7 +120,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio//CaseyGierke.pdf" class="img-responsive" alt="Slice of cake">
+                        <img src="/static/img/portfolio//CaseyGierke.htm" class="img-responsive" alt="Resume">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
