--- a/templates/index.html
+++ b/templates/index.html
@@ -80,7 +80,7 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
+                    <img class="img-responsive" src="/static/img/AXKM6745.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
                         <h1 class="name">Solutions Specialist {{name}}!</h1>
                         <hr class="star-light">
@@ -168,7 +168,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
+                        <p>Albuquerque New Mexico,
                             <br>United States</p>
                     </div>
                     <div class="footer-col col-md-4">
