Made comment and changed greeting banner

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,8 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/portfolio/AXKM6745.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Solutions Specialist {{name}}!</h1>
+                        <!-- Here is where the 'profile' definition feeds the name it got from the url -->
+                        <h1 class="name">Oi meu amigo {{name}}!</h1>
                         <hr class="star-light">
                         <span class="skills">Python Developer - Data Scientist - Environmental Consultant</span>
                     </div>
